# CppExo

./: .gitignore  CMakeExo.cpp  CMakeExo.h  CMakeLists.txt  Main.cpp  README.md
Communication/: Communication.vcxproj  Communication.vcxproj.filters
Communication/Debug/: vc142.idb
Communication/Include/: Communication.h
Communication/Src/: Communication.cpp  Ethernet.cpp
Debug/: Communication.ilk  Observers.ilk  Sensors.ilk  vc142.idb
Debug/Exo2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Filters/Include/: BaseFilter.h  HighPass.h
Filters/Src/: BaseFilter.cpp  HighPass.cpp
Managers/: CommunicationManager.cpp  CommunicationManager.h  FilterManager.cpp  FilterManager.h  Manager.cpp  Manager.h  Managers.cpp  Managers.vcxproj  Managers.vcxproj.filters  PlotManager.cpp  PlotManager.h  Publisher.cpp  Publisher.h  RecorderManager.cpp  RecorderManager.h  SensorManager.cpp  SensorManager.h  SerialManager.cpp  SerialManager.h
Managers/Debug/: vc142.idb
Managers/Headers/: CommunicationManager.h  FilterManager.h  Manager.h  PlotManager.h  Publisher.h  RecorderManager.h  SensorManager.cpp  SensorManager.h  SerialManager.h
Managers/Include/: FilterManager.h
Observers/: Observers.cpp  Observers.vcxproj  Observers.vcxproj.filters  Subscriber.cpp  Subscriber.h
Sensors/: .cproject  Accel.cpp  Accel.h  CMakeLists.txt  Counter.cpp  Counter.h  FSR.cpp  FSR.h  Gyro.cpp  Gyro.h  IMU.cpp  IMU.h  Mag.cpp  Mag.h  Sensor.cpp  Sensor.h  Sensors.cpp  Sensors.sln  Sensors.vcxproj  Sensors.vcxproj.filters  Temperature.cpp  Temperature.h
Sensors/Debug/: vc142.idb  (+3 more)
(+69 files in other folders)
