# CMakeList.txt : CMake project for CMakeExo, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("CMakeExo")

# Add source to this project's executable.
add_executable (CMakeExo "CMakeExo.cpp" "CMakeExo.h")

# TODO: Add tests and install targets if needed.
